add rough text file

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <h1>This the content of body</h1>
+    <h1>This the content of bodyfdc</h1>
   </body>
 </html>
