modify index.html, style.css and add icons

--- a/index.html
+++ b/index.html
@@ -9,6 +9,23 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <h1>This the content of bodyfdc</h1>
+    <div class="page-preview">
+      <nav>
+        <div class="left-logo">Gordon Otieno</div>
+        <div class="humburger"><img src="./icons/hamburger.png" alt="logo"></div>
+      </nav>
+      <div class="intro">
+        <h1>Hay There I'm Gordon</h1>
+        <h2>I am Software Developer</h2>
+        <p>I can help you develop develop application, Build websites, provide you with hosting servises and many more.
+           Please feel free to contact me on my social media accounts below</p>
+        </div>
+         <div class="social-media">
+          <div class="linkedin-icon"><img src="/icons/github.png" alt="linkedin"></div>
+          <div class="angelist-icon"><img src="/icons/angelist.png" alt="angelist"></div>
+          <div class="twiter-icon"><img src="/icons/twiter.png" alt="twitter"></div>
+          <div class="medium-icon"><img src="/icons/medium.png" alt="medium"></div>
+        </div>
+    </div>
   </body>
 </html>
